--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -1,8 +1,16 @@
+@import url("https://fonts.googleapis.com/css?family=Merriweather:700&display=swap");
+
 body{
     height: 100vh;
     background: linear-gradient(to bottom, #C06C84, #6C5B7B, #355C7D); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     text-align: center;
     color: white;
+}
+
+#nickWrap{
+    border-radius: 20px;
+    min-height: 200px;
+    background: rgba(255,255,255,.45);
 }
 
 
@@ -11,8 +19,8 @@ body{
 }
 
 #my_user{
-    padding-right: 30px;
-    padding-top: 10px;
+    text-align: left;
+    padding-left: 30px;
 }
 
 .btn{
@@ -44,3 +52,22 @@ body{
     margin: 10px;
     padding: 10px;
 }
+.navbar{
+    background: rgba(0,0,0,.2);
+}
+footer{
+    font-family: "Merriweather", rgb(53, 53, 53);
+    font-size: small;
+    display: flex;
+    margin-top: 40px;
+    flex-direction: column;
+    align-items: center;
+    justify-items: flex-end;
+  }
+  footer a{
+      text-decoration: none;
+      color: whitesmoke;
+  }
+  footer a:hover{
+    color: black;
+  }
