--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -2,7 +2,7 @@
 
 body{
     height: 100vh;
-    background-image: url("/img/gato.gif");
+    background-image: url("/img/gato-small.gif");
     background-color: #6C5B7B; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     text-align: center;
     color: white;
