--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -2,7 +2,7 @@
 
 body{
     height: 100vh;
-    background-image: url("/img/gato-small.gif");
+    /* background-image: url("/img/gato-small.gif"); */
     background-color: #6C5B7B; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     text-align: center;
     color: white;
@@ -11,6 +11,8 @@ body{
 
 #nickWrap{
     border-radius: 20px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
     min-height: 200px;
     background: rgba(255,255,255,.9);
 }
